EDA анализ данных

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -243,9 +243,9 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns                       #visualisation\n",
-    "import matplotlib.pyplot as plt             #visualisation\n",
-    "#%matplotlib inline                          #для графиков\n",
+    "import seaborn as sns                       #визуализация\n",
+    "import matplotlib.pyplot as plt             #мат\n",
+    "#%matplotlib inline                          #для графиков но почему то не работает\n",
     "#sns.set(color_codes=True)\n",
     "\n",
     "## 2. Описание данных\n",
