--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "eed01931-bddf-40fb-95a1-977b2d398295",
    "metadata": {},
    "outputs": [
@@ -1292,21 +1292,27 @@
     "axs[1,1].set_title('Корреляции ключевых свойств молекул')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d047c7b0-930d-495d-bbcc-25d1c8089481",
+   "cell_type": "markdown",
+   "id": "922076e6-6fa7-4b36-bdb3-96ec49f0450d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Распределение молекулярной массы\n",
+    "На графике видно, что большинство соединений имеют молекулярную массу в диапазоне 150–210 а.е.м. Это говорит о том, что исследуемые молекулы относительно лёгкие и подходят для органического синтеза.\n",
+    "\n",
+    "### Корреляции между свойствами\n",
+    "На тепловой карте заметна сильная положительная связь между `ExactMass` и `MolecularWeight`, что ожидаемо, так как они описывают схожие параметры. Также видно, что `TPSA` коррелирует с числом акцепторов водородных связей."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "df052d4c-933d-4d35-9633-da5ad8b224df",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 8. Итоги \n",
     "### Общие выводы \n",
